# connected-backend-colab

./: .gitignore  main.py  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py
app/api/auth/: jwt.py  router.py
app/api/messages/: models.py  router.py  schemas.py
app/api/projects/: categories.py  models.py  router.py  schemas.py
app/api/troubles/: categories.py  models.py  router.py  schemas.py
app/api/users/: models.py  router.py  schemas.py
app/core/: alembic.ini  config.py  database.py  dependencies.py  security.py
app/models/: base.py
app/schemas/: base.py
fastapi_venv/: pyvenv.cfg
fastapi_venv/Scripts/: activate  activate.bat
